--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@
 
 .in-map {
   /* From https://css.glass */
-  background: rgba(117, 207, 240, 0.34);
+  background: rgba(117, 207, 240, 0.6);
   backdrop-filter: blur(4.9px);
   -webkit-backdrop-filter: blur(4.9px);
   height: 57vh;
@@ -28,8 +28,18 @@
   font: 1rem Roboto, sans-serif;
 }
 
+.in-mobilev {
+  font-family: 'Roboto', sans-serif;
+}
+
 .in-id {
   margin-top: 8rem;
+}
+
+@media screen and (max-width: 375px) {
+  .in-id {
+    margin-top: 0;
+  }
 }
 
 .in-id h1 {
@@ -37,9 +47,21 @@
   text-align: center;
 }
 
+@media screen and (max-width: 375px) {
+  .in-id h1 {
+    font-size: 1rem;
+  }
+}
+
 .in-id p {
   font: 1rem Roboto, sans-serif;
   text-align: justify;
+}
+
+@media screen and (max-width: 375px) {
+  .in-id p {
+    font-size: .7rem;
+  }
 }
 
 .mapcard {
@@ -69,7 +91,7 @@
 
 .in-map {
   /* From https://css.glass */
-  background: rgba(117, 207, 240, 0.34);
+  background: rgba(117, 207, 240, 0.6);
   backdrop-filter: blur(4.9px);
   -webkit-backdrop-filter: blur(4.9px);
   height: 57vh;
@@ -91,8 +113,18 @@
   font: 1rem Roboto, sans-serif;
 }
 
+.in-mobilev {
+  font-family: 'Roboto', sans-serif;
+}
+
 .in-id {
   margin-top: 8rem;
+}
+
+@media screen and (max-width: 375px) {
+  .in-id {
+    margin-top: 0;
+  }
 }
 
 .in-id h1 {
@@ -100,9 +132,21 @@
   text-align: center;
 }
 
+@media screen and (max-width: 375px) {
+  .in-id h1 {
+    font-size: 1rem;
+  }
+}
+
 .in-id p {
   font: 1rem Roboto, sans-serif;
   text-align: justify;
+}
+
+@media screen and (max-width: 375px) {
+  .in-id p {
+    font-size: .7rem;
+  }
 }
 
 .mapcard {
@@ -139,6 +183,15 @@
   margin-bottom: 1rem;
 }
 
+@media screen and (max-width: 375px) {
+  .project-link {
+    margin: 0 4.1rem;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+}
+
 .project-link h2 {
   font: bold 1.2rem/2rem Oswald;
 }
@@ -147,12 +200,23 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 375px) {
+  .project-link img {
+    height: 1rem;
+    width: 2rem;
+  }
+}
+
 .mapboxgl-popup-content {
   z-index: 5;
-  width: 26rem;
+  width: 24rem;
   border-radius: 2rem;
   text-align: left;
   padding: 0;
+}
+
+.mapboxgl-popup-content a {
+  text-decoration: none;
 }
 
 .mapboxgl-popup-content h1 {
@@ -172,7 +236,7 @@
 
 .mapboxgl-popup-content .popupi {
   height: 7rem;
-  width: 26rem;
+  width: 24rem;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 1.2rem 1.2rem 0 0;
@@ -182,17 +246,42 @@
   display: none;
 }
 
-.marker {
-  background-image: url("https://www.logolynx.com/images/logolynx/d9/d9919c041510c71109ff9bb7a42e2259.png");
-  background-size: cover;
-  width: 50px;
-  border-radius: 50%;
+.mapbox-super-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+@media screen and (max-width: 375px) {
+  .mapbox-super-container {
+    display: none;
+  }
+}
+
+.mapbox-sper-container {
+  height: 70vh;
+}
+
+@media screen and (max-width: 375px) {
+  .mapbox-sper-container {
+    display: none;
+  }
 }
 
 .mapbox-parent-container {
   position: relative;
   width: 100vw;
   height: 100vh;
+}
+
+@media screen and (max-width: 375px) {
+  .mapbox-parent-container {
+    display: none;
+  }
 }
 
 .mapbox-parent-container .mapboxgl-control-container {
@@ -218,10 +307,7 @@
 
 .project-card {
   background-color: transparent;
-  min-height: 32rem;
-  max-height: -webkit-fit-content;
-  max-height: -moz-fit-content;
-  max-height: fit-content;
+  min-height: 14rem;
   width: 28rem;
   border-radius: 1.2rem;
   color: #373737;
@@ -238,6 +324,12 @@
   }
 }
 
+@media screen and (max-width: 375px) {
+  .project-card {
+    width: 20rem;
+  }
+}
+
 .project-card .card-img {
   height: 8rem;
   width: 100%;
@@ -246,13 +338,16 @@
      object-fit: cover;
 }
 
+@media screen and (max-width: 375px) {
+  .project-card .card-img {
+    height: 5rem;
+  }
+}
+
 .project-card .card-info {
   background-color: #FFFFFF;
   padding: 1.2rem;
-  min-height: 20rem;
-  max-height: -webkit-fit-content;
-  max-height: -moz-fit-content;
-  max-height: fit-content;
+  height: 22rem;
   border-radius: 0 0 1.2rem 1.2rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -267,15 +362,38 @@
   text-align: left;
 }
 
+@media screen and (max-width: 375px) {
+  .project-card .card-info {
+    height: 14rem;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
 .project-card .card-info .p-location {
   margin: 5px 0;
   font-size: 0.9rem;
+}
+
+@media screen and (max-width: 375px) {
+  .project-card .card-info .p-location {
+    font-size: 0.7rem;
+    font-weight: 500;
+  }
 }
 
 .project-card .card-info .p-name {
   margin: 2px 0;
   font-size: 1.6rem;
   font-weight: 400;
+}
+
+@media screen and (max-width: 375px) {
+  .project-card .card-info .p-name {
+    font-size: 1rem;
+    font-weight: 500;
+  }
 }
 
 .project-card .card-info p {
@@ -293,6 +411,12 @@
   -webkit-line-clamp: 5;
 }
 
+@media screen and (max-width: 375px) {
+  .project-card .card-info p {
+    font-size: .7rem;
+  }
+}
+
 .project-card .card-info .service-container {
   width: 100%;
   display: -ms-grid;
@@ -305,6 +429,12 @@
   -ms-flex-line-pack: center;
       align-content: center;
   margin-bottom: 1.2rem;
+}
+
+@media screen and (max-width: 375px) {
+  .project-card .card-info .service-container {
+    display: none;
+  }
 }
 
 .project-card .card-info .service-container .services-btn {
@@ -357,11 +487,12 @@
 }
 
 .projects-g {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   width: 100vw;
   padding-top: 2rem;
+  margin-top: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -376,9 +507,17 @@
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: auto;
-  -webkit-column-gap: 1rem;
-          column-gap: 1rem;
-  row-gap: 1.2rem;
+  -webkit-column-gap: 1.2rem;
+          column-gap: 1.2rem;
+  row-gap: 2.5rem;
+}
+
+@media screen and (max-width: 375px) {
+  .projects-g .grid-projects {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    row-gap: 1rem;
+  }
 }
 
 .navbar {
@@ -420,12 +559,33 @@
   font: 0.9rem normal Roboto, sans-serif;
 }
 
+@media screen and (max-width: 375px) {
+  .navbar .nav-options {
+    z-index: 1;
+    position: relative;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 15rem;
+    left: 0;
+  }
+}
+
 .navbar .nav-options .nav-item {
   cursor: pointer;
   padding: 0.5rem;
   letter-spacing: 1.25px;
   transition: border-radius 1.2s;
   -webkit-transition: border-radius 1.2s;
+}
+
+@media screen and (max-width: 375px) {
+  .navbar .nav-options .nav-item {
+    border-top: 1px solid #1A30DB;
+    margin-right: 40rem;
+    text-align: left;
+  }
 }
 
 .navbar .nav-options .nav-item:hover {
@@ -447,6 +607,23 @@
   color: #ffbc15;
 }
 
+.navbar .nabtn {
+  display: none;
+}
+
+@media screen and (max-width: 375px) {
+  .navbar .nabtn {
+    display: block;
+    position: absolute;
+    z-index: 3;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+    top: .5rem;
+    left: 1.7rem;
+  }
+}
+
 .footer {
   background-color: #1A30DB;
   height: 3.5rem;
@@ -454,6 +631,10 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -462,10 +643,24 @@
           align-items: center;
 }
 
+@media screen and (max-width: 375px) {
+  .footer {
+    max-width: 375px;
+    padding: 0;
+    margin-top: 3rem;
+  }
+}
+
 .footer .logo {
   background: transparent;
   border: none;
   cursor: pointer;
+}
+
+@media screen and (max-width: 375px) {
+  .footer .logo {
+    padding: 0 2rem;
+  }
 }
 
 .footer .nav-options {
@@ -486,7 +681,15 @@
   font: 0.9rem normal Roboto, sans-serif;
 }
 
-.footer .nav-options .nav-item {
+@media screen and (max-width: 375px) {
+  .footer .nav-options {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+}
+
+.footer .nav-options .navf-item {
   cursor: pointer;
   padding: 0.5rem;
   letter-spacing: 1.25px;
@@ -494,7 +697,19 @@
   -webkit-transition: border-radius 1.2s;
 }
 
-.footer .nav-options .nav-item:hover {
+@media screen and (max-width: 375px) {
+  .footer .nav-options .navf-item {
+    padding: .3rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .footer .nav-options .navf-item img {
+    height: 1rem;
+  }
+}
+
+.footer .nav-options .navf-item:hover {
   -webkit-filter: opacity(30%);
           filter: opacity(30%);
 }
@@ -507,9 +722,49 @@
   color: #ffbc15;
 }
 
+.mobileV .header.img {
+  width: 100vw;
+  position: relative;
+}
+
+.mobileV .in-mobilev {
+  z-index: 2;
+  border-radius: 1.2rem 1.2rem 0 0;
+  background: #FFFFFF;
+  margin-top: -1.6rem;
+  position: absolute;
+  padding: 1rem;
+}
+
+.mobileV .in-mobilev h1 {
+  font: 400 1.5rem/1.6rem Roboto, sans-serif;
+}
+
+.mobileV .in-mobilev p {
+  font: 400 .7rem/.8rem Roboto, sans-serif;
+}
+
 .Main .projects-g {
   margin-top: 35vh;
-  margin-bottom: 10vh;
+  margin-bottom: 8vh;
+}
+
+@media screen and (max-width: 375px) {
+  .Main .projects-g {
+    margin: 90% 0 5vh;
+  }
+}
+
+@media screen and (min-width: 378px) {
+  .Main .mobileV {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .Main .mapbox-parent-container {
+    display: none;
+  }
 }
 
 .projectinfo {
@@ -525,6 +780,39 @@
           column-gap: 1.5rem;
 }
 
+@media screen and (max-width: 375px) {
+  .projectinfo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .projectinfo .p-grid .p-text {
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .projectinfo .p-grid {
+    width: 100%;
+    z-index: 2;
+    border-radius: 1.2rem 1.2rem 0 0;
+    background: #FFFFFF;
+    margin-top: 20rem;
+    position: absolute;
+  }
+}
+
 .projectinfo .pimage {
   width: 30rem;
   height: 30rem;
@@ -533,9 +821,23 @@
      object-fit: cover;
 }
 
+@media screen and (max-width: 375px) {
+  .projectinfo .pimage {
+    width: 100vw;
+    position: relative;
+  }
+}
+
 .projectinfo p {
   margin-top: 2.5rem;
   font-size: 1.1rem;
+}
+
+@media screen and (max-width: 375px) {
+  .projectinfo p {
+    font-size: .7rem;
+    padding: 0 .3rem;
+  }
 }
 
 .s-container {
@@ -550,6 +852,14 @@
   -ms-flex-line-pack: center;
       align-content: center;
   margin-bottom: 1.2rem;
+}
+
+@media screen and (max-width: 375px) {
+  .s-container {
+    -webkit-column-gap: 5px;
+            column-gap: 5px;
+    row-gap: 5px;
+  }
 }
 
 .s-container .s-btn {
@@ -575,6 +885,13 @@
   font: .8rem Roboto;
 }
 
+@media screen and (max-width: 375px) {
+  .s-container .s-btn {
+    height: 3rem;
+    width: 90%;
+  }
+}
+
 .s-container .s-btn .limage {
   -o-object-fit: contain;
      object-fit: contain;
@@ -588,12 +905,31 @@
   margin-top: 3rem;
 }
 
+@media screen and (max-width: 375px) {
+  .project-problem {
+    margin-top: 15rem;
+  }
+}
+
 .project-problem p {
   font: normal 400 1rem/1.5rem Roboto, sans-serif;
 }
 
+@media screen and (max-width: 375px) {
+  .project-problem p {
+    font: 400 .7rem/.9rem Roboto, sans-serif;
+  }
+}
+
 .project-collapsible {
   margin-top: 6rem;
+  margin-bottom: 4rem;
+}
+
+@media screen and (max-width: 375px) {
+  .project-collapsible {
+    margin-top: 2rem;
+  }
 }
 
 .Collapsible {
@@ -649,10 +985,17 @@
 }
 
 .main-gallery {
-  width: 100%;
+  width: 100vw;
   height: 30rem;
   margin-top: 5rem;
   margin-bottom: 5rem;
+}
+
+@media screen and (max-width: 375px) {
+  .main-gallery {
+    height: 20rem;
+    margin-bottom: 2rem;
+  }
 }
 
 .main-gallery .project-gallery {
@@ -678,8 +1021,14 @@
   -o-object-fit: cover;
      object-fit: cover;
   vertical-align: bottom;
-  margin: .2rem;
-  border-radius: .5rem;
+  margin: 0.2rem;
+  border-radius: 0.5rem;
+}
+
+@media screen and (max-width: 375px) {
+  .main-gallery .project-gallery .gallery-img {
+    width: 30vw;
+  }
 }
 
 .project-impact {
@@ -690,6 +1039,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  margin-top: 4rem;
 }
 
 .project-impact .chart-container {
@@ -710,6 +1060,19 @@
   padding: 0;
 }
 
+@media screen and (max-width: 375px) {
+  .project-impact .chart-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -webkit-column-gap: 1rem;
+            column-gap: 1rem;
+    row-gap: 1.7rem;
+    margin-top: 1rem;
+  }
+}
+
 .project-impact .chart-container .graph-info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -728,6 +1091,13 @@
   border-radius: .8rem;
 }
 
+@media screen and (max-width: 375px) {
+  .project-impact .chart-container .graph-info {
+    height: 3.7rem;
+    width: 9rem;
+  }
+}
+
 .project-impact .chart-container .graph-info h3 {
   font: normal 500 1.1rem/1.3rem Roboto, sans-serif;
   text-transform: uppercase;
@@ -735,18 +1105,39 @@
   color: #333333;
 }
 
+@media screen and (max-width: 375px) {
+  .project-impact .chart-container .graph-info h3 {
+    font: 400 .7rem/.7rem Roboto, sans-serif;
+  }
+}
+
 .project-impact .chart-container .graph-info h4 {
   font: normal bold 3.7rem/.7rem Roboto, sans-serif;
   color: #1A30DB;
   margin: 0;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+@media screen and (max-width: 375px) {
+  .project-impact .chart-container .graph-info h4 {
+    font-size: 1.6rem;
+  }
+}
+
+.project-impact .chart-container .graph-info h4:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  text-shadow: 2px 2px rgba(90, 129, 202, 0.514);
 }
 
 .map-i-container {
   margin-top: 4rem;
+  border-radius: 1.2rem;
 }
 
 .map-i-container .map-project {
-  height: 400px;
+  height: 23rem;
 }
 
 .IdProjects {
@@ -755,6 +1146,12 @@
   height: fit-content;
   margin: 1.5rem 9rem 5rem;
   font-family: 'Roboto', sans-serif;
+}
+
+@media screen and (max-width: 375px) {
+  .IdProjects {
+    margin: 1.5rem .6rem 2rem;
+  }
 }
 
 .IdProjects .p-medium {
@@ -767,10 +1164,24 @@
   font-size: 1.2rem;
 }
 
+@media screen and (max-width: 375px) {
+  .IdProjects .p-big {
+    font-size: .7rem;
+    padding: .5rem .7rem;
+  }
+}
+
 .IdProjects .p-name {
   margin: 2px 0 2rem;
   font-size: 2.8rem;
   font-weight: 400;
+}
+
+@media screen and (max-width: 375px) {
+  .IdProjects .p-name {
+    font-size: 1.5rem;
+    padding: 0 .7rem;
+  }
 }
 
 body {
