--- a/src/styles/1-components/mapbox/_MapPopup.scss
+++ b/src/styles/1-components/mapbox/_MapPopup.scss
@@ -1,13 +1,19 @@
 .mapboxgl-popup-content {
     z-index: 5;
-    width: 26rem;
+    
+    width: 24rem;
     border-radius: 2rem;
     text-align: left;
     padding: 0;
 
+    a {
+        text-decoration: none;
+    }
+
     h1 {
         font: normal 400 1.5rem/1.5rem Roboto, sans-serif;
         padding: 0 10px;
+        
     }
 
     h3 {
@@ -23,7 +29,7 @@
     .popupi {
         
             height: 7rem;
-            width: 26rem;
+            width: 24rem;
     
             object-fit: cover;
 
@@ -31,14 +37,10 @@
         
     }
 
+
     .mapboxgl-popup-close-button {
         display: none;
     }
 }
 
-.marker {
-    background-image: url('https://www.logolynx.com/images/logolynx/d9/d9919c041510c71109ff9bb7a42e2259.png');
-    background-size: cover;
-    width: 50px;
-    border-radius: 50%;
-}
+
