--- a/src/styles/1-components/mapbox/_ProjectLink.scss
+++ b/src/styles/1-components/mapbox/_ProjectLink.scss
@@ -7,11 +7,20 @@
     margin-top: 80vh;
     margin-bottom: 1rem;
 
+    @media screen and (max-width: 375px) {
+        margin: 0 4.1rem;
+        width: fit-content;
+    }
+
     h2 {
         font: bold 1.2rem/2rem Oswald; 
     }
 
     img {
         cursor: pointer;
+        @media screen and (max-width: 375px) {
+            height: 1rem;
+            width: 2rem;
+        }
     }
 }
