--- a/src/styles/1-components/projects-id/_Chart.scss
+++ b/src/styles/1-components/projects-id/_Chart.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
 
+  margin-top: 4rem;
+
   .chart-container {
       margin-top: 4rem;
     display: flex;
@@ -9,6 +11,14 @@
     justify-content: space-between;
     align-items: flex-start;
     padding: 0;
+
+    @media screen and (max-width: 375px) {
+      display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     column-gap: 1rem;
+     row-gap: 1.7rem;
+     margin-top: 1rem;
+    }
 
     .graph-info {
         display: flex;
@@ -20,18 +30,38 @@
         max-width: 12rem;
         background-color: $gris5;
         border-radius: .8rem;
+
+        @media screen and (max-width: 375px) {
+          height: 3.7rem;
+          width: 9rem;
+        }
         
         h3 {
             font: normal 500 1.1rem/1.3rem Roboto, sans-serif;
             text-transform: uppercase;
             padding: .5rem .6rem;
             color: $gris1;
+
+            @media screen and (max-width: 375px) {
+              font: 400 .7rem/.7rem Roboto, sans-serif;
+            }
+            
         }
 
         h4 {
             font: normal bold 3.7rem/.7rem Roboto, sans-serif;
             color: $azul-to;
             margin: 0;
+            transition: .3s ease-in-out;
+
+            @media screen and (max-width: 375px) {
+              font-size: 1.6rem;
+            }
+
+            &:hover {
+              transform: scale(1.2);
+              text-shadow: 2px 2px rgba(90, 129, 202, 0.514);
+            }
         }
     }
   }
