--- a/src/styles/1-components/projects-id/_Gallery.scss
+++ b/src/styles/1-components/projects-id/_Gallery.scss
@@ -1,24 +1,34 @@
 .main-gallery {
+  width: 100vw;
+  height: 30rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+
+  @media screen and (max-width: 375px) {
+      height: 20rem;
+      margin-bottom: 2rem;
+  }
+  .project-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: flex-start;
+
+    height: 12rem;
     width: 100%;
-    height: 30rem;
-    margin-top: 5rem;
-    margin-bottom: 5rem ;
-    .project-gallery {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        align-items: flex-start;
-        
-        height: 12rem;
-        width: 100%;
-        
-        .gallery-img {
-            max-height: 100%;
-  width: 32%;
-  object-fit: cover;
-  vertical-align: bottom;
-  margin: .2rem;
-  border-radius: .5rem;
-        }
+
+    .gallery-img {
+      max-height: 100%;
+      width: 32%;
+      object-fit: cover;
+      vertical-align: bottom;
+      margin: 0.2rem;
+      border-radius: 0.5rem;
+
+      @media screen and (max-width:375px) {
+          width: 30vw;
+          
+      }
     }
+  }
 }
