--- a/src/styles/1-components/projects-id/_ProjectInfo.scss
+++ b/src/styles/1-components/projects-id/_ProjectInfo.scss
@@ -8,16 +8,51 @@
   grid-template-columns: repeat(2, minmax(0, 1fr));
   column-gap: 1.5rem;
 
+  @media screen and (max-width: 375px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+
+  .p-grid {
+
+    .p-text {
+      @media screen and (max-width:375px) {
+        padding: 1rem;
+      }
+    }
+
+    @media screen and (max-width:375px) {
+      width: 100%;
+
+      z-index: 2;
+      border-radius: 1.2rem 1.2rem 0 0;
+      background: $blanco-to;
+      margin-top: 20rem;
+      position: absolute;    
+    }
+  }
+
   .pimage {
     width: 30rem;
     height: 30rem;
     border-radius: 1.2rem;
     object-fit: cover;
+
+    @media screen and (max-width: 375px) {
+      width: 100vw;
+        position: relative; 
+    }
   }
 
   p {
     margin-top: 2.5rem;
     font-size: 1.1rem;
+    @media screen and (max-width: 375px) {
+      font-size: .7rem;
+      padding: 0 .3rem;
+    }
   }
 }
 
@@ -31,6 +66,11 @@
     align-content: center;
     
     margin-bottom: 1.2rem;
+
+    @media screen and (max-width: 375px) {
+      column-gap: 5px;
+      row-gap: 5px;
+    }
 
     .s-btn {
       height: 2.7rem;
@@ -47,6 +87,11 @@
 
       white-space: normal;
       font: .8rem Roboto;
+
+      @media screen and (max-width: 375px) {
+        height: 3rem;
+        width: 90%;
+      }
 
       .limage {
         object-fit: contain;
