--- a/src/styles/2-layout/_IdProject.scss
+++ b/src/styles/2-layout/_IdProject.scss
@@ -11,6 +11,11 @@
     margin: 1.5rem 9rem 5rem;
     font-family: 'Roboto', sans-serif;
 
+    @media screen and (max-width:375px) {
+      margin: 1.5rem .6rem 2rem;
+      
+    }
+
     .p-medium {
         font: normal 400 1.5rem Roboto, sans-serif; 
         margin-bottom: 2rem;
@@ -19,11 +24,21 @@
     .p-big {
         margin: 5px 0 .5rem;
         font-size: 1.2rem;
+
+        @media screen and (max-width: 375px) {
+          font-size: .7rem;
+          padding: .5rem .7rem;
+        }
       }
   
       .p-name {
         margin: 2px 0 2rem;
         font-size: 2.8rem;
         font-weight: 400;
+
+        @media screen and (max-width: 375px) {
+          font-size: 1.5rem;
+          padding: 0 .7rem; 
+        }
       }
 }
