styling components, and optimized mobile v

--- a/src/styles/1-components/mapbox/_MapPopup.scss
+++ b/src/styles/1-components/mapbox/_MapPopup.scss
@@ -1,46 +1,40 @@
 .mapboxgl-popup-content {
-    z-index: 5;
-    
+  z-index: 5;
+
+  width: 24rem;
+  border-radius: 2rem;
+  text-align: left;
+  padding: 0;
+
+  a {
+    text-decoration: none;
+  }
+
+  h1 {
+    font: normal 400 1.5rem/1.5rem Roboto, sans-serif;
+    padding: 0 10px;
+  }
+
+  h3 {
+    font: normal 400 1rem/1rem Roboto, sans-serif;
+    padding: 0 10px;
+  }
+
+  p {
+    font-size: 0.8rem;
+    padding: 0 10px;
+  }
+
+  .popupi {
+    height: 7rem;
     width: 24rem;
-    border-radius: 2rem;
-    text-align: left;
-    padding: 0;
 
-    a {
-        text-decoration: none;
-    }
+    object-fit: cover;
 
-    h1 {
-        font: normal 400 1.5rem/1.5rem Roboto, sans-serif;
-        padding: 0 10px;
-        
-    }
+    border-radius: 1.2rem 1.2rem 0 0;
+  }
 
-    h3 {
-        font: normal 400 1rem/1rem Roboto, sans-serif;
-        padding: 0 10px;
-    }
-
-    p {
-        font-size: .8rem;
-        padding: 0 10px;
-    }
-
-    .popupi {
-        
-            height: 7rem;
-            width: 24rem;
-    
-            object-fit: cover;
-
-            border-radius: 1.2rem 1.2rem 0 0;
-        
-    }
-
-
-    .mapboxgl-popup-close-button {
-        display: none;
-    }
+  .mapboxgl-popup-close-button {
+    display: none;
+  }
 }
-
-
