--- a/src/styles/_App.scss
+++ b/src/styles/_App.scss
@@ -1,8 +1,8 @@
-$azul-to: #1A30DB;
+$azul-to: #1a30db;
 $rosa-to: #ba1863;
 $amarillo-to: #ffbc15;
 $negro-to: #373737;
-$blanco-to:#FFFFFF;
+$blanco-to: #ffffff;
 $gris1: #333333;
 $gris2: #6f6f6f;
 $gris3: #918f8f;
@@ -12,4 +12,3 @@ $gris5: #f2f2f2;
 .Main {
   text-align: center;
 }
-
