--- a/src/styles/1-components/mapbox/_MobileV.scss
+++ b/src/styles/1-components/mapbox/_MobileV.scss
@@ -1,27 +1,23 @@
 .mobileV {
+  .header.img {
+    width: 100vw;
+    position: relative;
+  }
 
-    .header.img {
-        width: 100vw;
-        position: relative;  
-    } 
+  .in-mobilev {
+    z-index: 2;
+    border-radius: 1.2rem 1.2rem 0 0;
+    background: $blanco-to;
+    margin-top: -1.6rem;
+    position: absolute;
+    padding: 1rem;
 
-    .in-mobilev {
-        z-index: 2;
-        border-radius: 1.2rem 1.2rem 0 0;
-        background: $blanco-to;
-        margin-top: -1.6rem;
-        position: absolute;
-        padding: 1rem; 
-
-        h1 {
-            font: 400 1.5rem/1.6rem Roboto, sans-serif;
-        }
-
-        p {
-            font: 400 .7rem/.8rem Roboto, sans-serif;
-        }
-
-        
+    h1 {
+      font: 400 1.5rem/1.6rem Roboto, sans-serif;
     }
-   
+
+    p {
+      font: 400 0.7rem/.8rem Roboto, sans-serif;
+    }
+  }
 }
