--- a/src/styles/1-components/navbar/_Navbar.scss
+++ b/src/styles/1-components/navbar/_Navbar.scss
@@ -8,7 +8,6 @@
   justify-content: space-between;
   align-items: center;
 
-
   .logo {
     background: transparent;
     border: none;
@@ -34,10 +33,9 @@
       position: relative;
       flex-direction: column;
       margin-top: 15rem;
-  
+
       left: 0;
     }
-    
 
     .nav-item {
       cursor: pointer;
@@ -47,9 +45,11 @@
       -webkit-transition: border-radius 1.2s;
 
       @media screen and(max-width:375px) {
-          border-top: 1px solid $azul-to;
-          margin-right: 40rem;
-          text-align: left;
+        border-top: 1px solid $gris5;
+        margin-right: 39rem;
+        text-align: left;
+        background-color: $azul-to;
+        width: 80%;
       }
 
       &:hover {
@@ -76,7 +76,7 @@
   .nabtn {
     display: none;
 
-    @media screen and (max-width:375px) {
+    @media screen and (max-width: 375px) {
       display: block;
       position: absolute;
       z-index: 3;
@@ -85,7 +85,7 @@
       background-color: transparent;
       border: none;
 
-      top: .5rem;
+      top: 0.5rem;
       left: 1.7rem;
     }
   }
