--- a/src/styles/1-components/projects-id/_Chart.scss
+++ b/src/styles/1-components/projects-id/_Chart.scss
@@ -5,7 +5,7 @@
   margin-top: 4rem;
 
   .chart-container {
-      margin-top: 4rem;
+    margin-top: 4rem;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -14,55 +14,54 @@
 
     @media screen and (max-width: 375px) {
       display: grid;
-     grid-template-columns: repeat(2, 1fr);
-     column-gap: 1rem;
-     row-gap: 1.7rem;
-     margin-top: 1rem;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 1rem;
+      row-gap: 1.7rem;
+      margin-top: 1rem;
     }
 
     .graph-info {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-        
-        max-height: 7rem;
-        max-width: 12rem;
-        background-color: $gris5;
-        border-radius: .8rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      max-height: 7rem;
+      max-width: 12rem;
+      background-color: $gris5;
+      border-radius: 0.8rem;
+
+      @media screen and (max-width: 375px) {
+        height: 3.7rem;
+        width: 9rem;
+      }
+
+      h3 {
+        font: normal 500 1.1rem/1.3rem Roboto, sans-serif;
+        text-transform: uppercase;
+        padding: 0.5rem 0.6rem;
+        color: $gris1;
 
         @media screen and (max-width: 375px) {
-          height: 3.7rem;
-          width: 9rem;
+          font: 400 0.7rem/.7rem Roboto, sans-serif;
         }
-        
-        h3 {
-            font: normal 500 1.1rem/1.3rem Roboto, sans-serif;
-            text-transform: uppercase;
-            padding: .5rem .6rem;
-            color: $gris1;
+      }
 
-            @media screen and (max-width: 375px) {
-              font: 400 .7rem/.7rem Roboto, sans-serif;
-            }
-            
+      h4 {
+        font: normal bold 3.7rem/0.7rem Roboto, sans-serif;
+        color: $azul-to;
+        margin: 0;
+        transition: 0.3s ease-in-out;
+
+        @media screen and (max-width: 375px) {
+          font-size: 1.6rem;
         }
 
-        h4 {
-            font: normal bold 3.7rem/.7rem Roboto, sans-serif;
-            color: $azul-to;
-            margin: 0;
-            transition: .3s ease-in-out;
-
-            @media screen and (max-width: 375px) {
-              font-size: 1.6rem;
-            }
-
-            &:hover {
-              transform: scale(1.2);
-              text-shadow: 2px 2px rgba(90, 129, 202, 0.514);
-            }
+        &:hover {
+          transform: scale(1.2);
+          text-shadow: 2px 2px rgba(90, 129, 202, 0.514);
         }
+      }
     }
   }
 }
