--- a/src/styles/1-components/projects/_ProjectCard.scss
+++ b/src/styles/1-components/projects/_ProjectCard.scss
@@ -1,7 +1,7 @@
 .project-card {
   background-color: transparent;
   min-height: 14rem;
-  
+
   width: 28rem;
 
   border-radius: 1.2rem;
@@ -13,12 +13,11 @@
   margin-bottom: 2rem;
 
   @media (prefers-reduced-motion: no-preference) {
-      animation: wipe-enter 1s;  
+    animation: wipe-enter 1s;
   }
 
   @media screen and (max-width: 375px) {
-    
-    width: 20rem; 
+    width: 20rem;
   }
 
   .card-img {
@@ -36,14 +35,12 @@
     background-color: $blanco-to;
     padding: 1.2rem;
     height: 22rem;
-    
 
     border-radius: 0 0 1.2rem 1.2rem;
 
     display: flex;
     flex-flow: column wrap;
     justify-content: space-between;
-  
 
     text-align: left;
 
@@ -61,7 +58,7 @@
         font-weight: 500;
       }
     }
-    
+
     .p-name {
       margin: 2px 0;
       font-size: 1.6rem;
@@ -82,14 +79,14 @@
       -webkit-box-orient: vertical;
       overflow: hidden;
 
-      transition-duration: .2s;
+      transition-duration: 0.2s;
 
       &:hover {
         -webkit-line-clamp: 5;
       }
 
       @media screen and (max-width: 375px) {
-        font-size: .7rem; 
+        font-size: 0.7rem;
       }
     }
 
@@ -101,7 +98,7 @@
       column-gap: 10px;
       row-gap: 10px;
       align-content: center;
-      
+
       margin-bottom: 1.2rem;
 
       @media screen and (max-width: 375px) {
@@ -122,7 +119,7 @@
         border: $gris1 solid 1px;
 
         white-space: normal;
-        font: .8rem Roboto;
+        font: 0.8rem Roboto;
 
         img {
           object-fit: contain;
@@ -134,7 +131,6 @@
       height: 3rem;
       width: 100%;
       background-color: transparent;
-      
 
       border-radius: 5px;
       border: $gris1 solid 1px;
