--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -60,7 +60,7 @@
 
 @media screen and (max-width: 375px) {
   .in-id p {
-    font-size: .7rem;
+    font-size: 0.7rem;
   }
 }
 
@@ -77,7 +77,7 @@
   border-radius: 5px;
   border: none;
   font: 1rem Roboto, sans-serif;
-  color: #FFFFFF;
+  color: #ffffff;
   text-transform: uppercase;
   cursor: pointer;
   transition: border-radius 1.2s;
@@ -145,7 +145,7 @@
 
 @media screen and (max-width: 375px) {
   .in-id p {
-    font-size: .7rem;
+    font-size: 0.7rem;
   }
 }
 
@@ -162,7 +162,7 @@
   border-radius: 5px;
   border: none;
   font: 1rem Roboto, sans-serif;
-  color: #FFFFFF;
+  color: #ffffff;
   text-transform: uppercase;
   cursor: pointer;
   transition: border-radius 1.2s;
@@ -230,7 +230,7 @@
 }
 
 .mapboxgl-popup-content p {
-  font-size: .8rem;
+  font-size: 0.8rem;
   padding: 0 10px;
 }
 
@@ -295,7 +295,7 @@
 
 .mapbox-parent-container .map-overview-container {
   position: absolute;
-  top: .5rem;
+  top: 0.5rem;
   left: 77%;
   width: 20%;
   height: 20%;
@@ -345,7 +345,7 @@
 }
 
 .project-card .card-info {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding: 1.2rem;
   height: 22rem;
   border-radius: 0 0 1.2rem 1.2rem;
@@ -403,8 +403,8 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  -webkit-transition-duration: .2s;
-          transition-duration: .2s;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
 }
 
 .project-card .card-info p:hover {
@@ -413,7 +413,7 @@
 
 @media screen and (max-width: 375px) {
   .project-card .card-info p {
-    font-size: .7rem;
+    font-size: 0.7rem;
   }
 }
 
@@ -457,7 +457,7 @@
   border-radius: 40px;
   border: #333333 solid 1px;
   white-space: normal;
-  font: .8rem Roboto;
+  font: 0.8rem Roboto;
 }
 
 .project-card .card-info .service-container .services-btn img {
@@ -521,7 +521,7 @@
 }
 
 .navbar {
-  background-color: #1A30DB;
+  background-color: #1a30db;
   height: 3.5rem;
   padding: 0 10rem;
   display: -webkit-box;
@@ -542,7 +542,7 @@
 }
 
 .navbar .nav-options {
-  color: #FFFFFF;
+  color: #ffffff;
   width: 45vw;
   height: 2rem;
   display: -webkit-box;
@@ -582,15 +582,17 @@
 
 @media screen and (max-width: 375px) {
   .navbar .nav-options .nav-item {
-    border-top: 1px solid #1A30DB;
-    margin-right: 40rem;
+    border-top: 1px solid #f2f2f2;
+    margin-right: 39rem;
     text-align: left;
+    background-color: #1a30db;
+    width: 80%;
   }
 }
 
 .navbar .nav-options .nav-item:hover {
   border-radius: 50px 50px 50px 10px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: #333333;
 }
 
@@ -619,13 +621,13 @@
     cursor: pointer;
     background-color: transparent;
     border: none;
-    top: .5rem;
+    top: 0.5rem;
     left: 1.7rem;
   }
 }
 
 .footer {
-  background-color: #1A30DB;
+  background-color: #1a30db;
   height: 3.5rem;
   padding: 0 10rem;
   display: -webkit-box;
@@ -664,7 +666,7 @@
 }
 
 .footer .nav-options {
-  color: #FFFFFF;
+  color: #ffffff;
   width: 25vw;
   height: 2rem;
   display: -webkit-box;
@@ -699,7 +701,7 @@
 
 @media screen and (max-width: 375px) {
   .footer .nav-options .navf-item {
-    padding: .3rem;
+    padding: 0.3rem;
   }
 }
 
@@ -730,7 +732,7 @@
 .mobileV .in-mobilev {
   z-index: 2;
   border-radius: 1.2rem 1.2rem 0 0;
-  background: #FFFFFF;
+  background: #ffffff;
   margin-top: -1.6rem;
   position: absolute;
   padding: 1rem;
@@ -741,7 +743,7 @@
 }
 
 .mobileV .in-mobilev p {
-  font: 400 .7rem/.8rem Roboto, sans-serif;
+  font: 400 0.7rem/.8rem Roboto, sans-serif;
 }
 
 .Main .projects-g {
@@ -807,7 +809,7 @@
     width: 100%;
     z-index: 2;
     border-radius: 1.2rem 1.2rem 0 0;
-    background: #FFFFFF;
+    background: #ffffff;
     margin-top: 20rem;
     position: absolute;
   }
@@ -824,6 +826,7 @@
 @media screen and (max-width: 375px) {
   .projectinfo .pimage {
     width: 100vw;
+    border-radius: 0;
     position: relative;
   }
 }
@@ -835,8 +838,8 @@
 
 @media screen and (max-width: 375px) {
   .projectinfo p {
-    font-size: .7rem;
-    padding: 0 .3rem;
+    font-size: 0.7rem;
+    padding: 0 0.3rem;
   }
 }
 
@@ -882,13 +885,14 @@
   border-radius: 40px;
   border: #333333 solid 1px;
   white-space: normal;
-  font: .8rem Roboto;
+  font: 0.8rem Roboto;
 }
 
 @media screen and (max-width: 375px) {
   .s-container .s-btn {
     height: 3rem;
     width: 90%;
+    font-size: 0.7rem;
   }
 }
 
@@ -917,7 +921,7 @@
 
 @media screen and (max-width: 375px) {
   .project-problem p {
-    font: 400 .7rem/.9rem Roboto, sans-serif;
+    font: 400 0.7rem/.9rem Roboto, sans-serif;
   }
 }
 
@@ -985,7 +989,6 @@
 }
 
 .main-gallery {
-  width: 100vw;
   height: 30rem;
   margin-top: 5rem;
   margin-bottom: 5rem;
@@ -1017,7 +1020,7 @@
 
 .main-gallery .project-gallery .gallery-img {
   max-height: 100%;
-  width: 32%;
+  width: 30%;
   -o-object-fit: cover;
      object-fit: cover;
   vertical-align: bottom;
@@ -1088,7 +1091,7 @@
   max-height: 7rem;
   max-width: 12rem;
   background-color: #f2f2f2;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
 }
 
 @media screen and (max-width: 375px) {
@@ -1101,22 +1104,22 @@
 .project-impact .chart-container .graph-info h3 {
   font: normal 500 1.1rem/1.3rem Roboto, sans-serif;
   text-transform: uppercase;
-  padding: .5rem .6rem;
+  padding: 0.5rem 0.6rem;
   color: #333333;
 }
 
 @media screen and (max-width: 375px) {
   .project-impact .chart-container .graph-info h3 {
-    font: 400 .7rem/.7rem Roboto, sans-serif;
+    font: 400 0.7rem/.7rem Roboto, sans-serif;
   }
 }
 
 .project-impact .chart-container .graph-info h4 {
-  font: normal bold 3.7rem/.7rem Roboto, sans-serif;
-  color: #1A30DB;
+  font: normal bold 3.7rem/0.7rem Roboto, sans-serif;
+  color: #1a30db;
   margin: 0;
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
 @media screen and (max-width: 375px) {
@@ -1150,7 +1153,7 @@
 
 @media screen and (max-width: 375px) {
   .IdProjects {
-    margin: 1.5rem .6rem 2rem;
+    margin: 0rem 0.6rem 2rem;
   }
 }
 
@@ -1160,14 +1163,14 @@
 }
 
 .IdProjects .p-big {
-  margin: 5px 0 .5rem;
+  margin: 5px 0 0.5rem;
   font-size: 1.2rem;
 }
 
 @media screen and (max-width: 375px) {
   .IdProjects .p-big {
-    font-size: .7rem;
-    padding: .5rem .7rem;
+    font-size: 0.7rem;
+    padding: 0.5rem 0.7rem;
   }
 }
 
@@ -1180,7 +1183,7 @@
 @media screen and (max-width: 375px) {
   .IdProjects .p-name {
     font-size: 1.5rem;
-    padding: 0 .7rem;
+    padding: 0 0.7rem;
   }
 }
 
